--- a/source/_posts/应用开发相关标准文档汇总.md
+++ b/source/_posts/应用开发相关标准文档汇总.md
@@ -9,6 +9,9 @@ tags: Codes
 - [JVM(TM) Tool Interface 17.0.0](https://docs.oracle.com/en/java/javase/17/docs/specs/jvmti.html)
 - [JAR File Specification](https://docs.oracle.com/en/java/javase/17/docs/specs/jar/jar.html)
 
+# JSR
+- [Java Servlet Specification](https://jcp.org/en/jsr/summary?id=servlet)
+
 # TCP
 - [RFC 793: "Transmission Control Protocol"](https://datatracker.ietf.org/doc/rfc793/)
 - [RFC 1122: "Requirements for Internet Hosts -- Communication Layers"](https://datatracker.ietf.org/doc/rfc1122/)
